1999-12-14  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* goops.c (SCM_GOOPS_UNBOUND): Define as SCM_UNBOUND if existent.

1999-12-12  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* goops.c (set_slot_value_if_unbound): Removed.
	(slot_definition_using_name): New function.
	(get_slot_value, set_slot_value): Now takes a slot definition
	instead of name as third (fourth) arg.
	(get_slot_value_using_name, set_slot_value_using_name): Same
	signature as old versions of get/set_slot_value.
	(scm_sys_initialize_object): Use get/set_slot_value directly and
	using the slot definition so that initialization becomes
	O(n_slots) instead of O(n_slots^2).  Initialization also becomes
	independent of slot naming.

1999-12-08  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* goops.scm (compute-slots): New generic function in the MOP.
	(initialize): Use `compute-slots' when computing slots for a new
	class.

1999-12-04  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* dispatch.scm (cache-try-hash!): Bugfix: Measure max number of
	cache misses for any method instead of the sum of cache misses for
	all methods.

1999-10-13  Christian Lynbech  <chl@tbit.dk>

	* goops.scm (export): Added 'update-instance-for-different-class'.
	(change-object-class): Added call to
	'update-instance-for-different-class'.
	(update-instance-for-different-class): New generic function.

	* mop.text: Added 'update-instance-for-different-class'

1999-10-08  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	Bugfix: Given method M1 with specializers S1, ..., Sk and M2 with
	specializers S1, ..., Sk, Sk+1, ... (specializers S1, ..., Sk same
	as for M1), a call to M2 got a cache hit on M1 if M1 had been used
	before.  This is fixed with the following changes:
	
	* dispatch.scm (method-cache-install!): Don't initialize
	n-specialized here.

	* goops.scm (internal-add-method!): Set n-specialized to the
	number of specializers + 1 for rest arg specializers.

	* goops.c (scm_sys_invalidate_method_cache_x): Initialize